# visioncraft-lib

./: .gitignore  CMakeLists.txt  README.md  image.hpp  load_image.cpp  main.cpp  stb_image.h  stb_image_write.h
test/: process_image.cpp
